Correction in MEET

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Macopedia - TASK 2</title>
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
+
     <link href="css/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto" rel="stylesheet">
@@ -169,43 +170,98 @@
             nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</span>
     </div>
 
-    <div class="row">
+    <div class="row meet__team">
        <div class="col-sm-4 col-xs-12">
-
-           <div class="row  meet__team">
-
-               <figure class="meet__team--one">
-                   <img src="img/meet_img_1.png"/>
-                   <figcaption>
-                       <div class="meet__team--one--pictogram">
-                       <img class="meet__team--one--pictogram--1"src="img/pictograms/meet_facebook.png"/>
-                       <img class="meet__team--one--pictogram--2"src="img/pictograms/meet_twitter.png"/>
-                       <img class="meet__team--one--pictogram--2"src="img/pictograms/meet_pinterest.png"/>
-                       <img class="meet__team--one--pictogram--2"src="img/pictograms/meet_instagram.png"/>
-                       </div>
-                   </figcaption>
-               </figure>
-               <!--<div class="meet__team--back"></div>
-               <div class="meet__team--img">
-                   <img src="img/meet_img_1.png"/>
-               </div>
-               <div class="meet__team--top"></div>
-
-
-               <!--<div class="meet__team__img__small">
-                   <img class="meet__team__img__small--1"src="img/pictograms/meet_facebook.png"/>
-                   <img class="meet__team__img__small--2"src="img/pictograms/meet_twitter.png"/>
-                   <img class="meet__team__img__small--2"src="img/pictograms/meet_pinterest.png"/>
-                   <img class="meet__team__img__small--2"src="img/pictograms/meet_instagram.png"/>
-                   </div>
-               </div>-->
+           <div class="meet__team--back">
 
            </div>
+               <div class="meet__team--top">
+                   <div class="row">
+                       <img class="meet__team__img__small--1"src="img/pictograms/meet_facebook.png"/>
+                       <img class="meet__team__img__small--2"src="img/pictograms/meet_twitter.png"/>
+                       <img class="meet__team__img__small--3"src="img/pictograms/meet_pinterest.png"/>
+                       <img class="meet__team__img__small--3"src="img/pictograms/meet_instagram.png"/>
+                   </div>
+               </div>
+           <div class="meet__team--people meet__team--people--1">
+           </div>
+           <div class="row meet__name">
+               <div class="col-sm-4 col-xs-12">
+                   <div class="row meet__name--name">MATTEW&nbsp;DIX</div>
+                   <div class="row meet__name--work">Graphic&nbsp;Design</div>
+               </div>
+           </div>
+        </div>
+
+        <div class="col-sm-4 col-xs-12">
+            <div class="meet__team--back"></div>
+                <div class="meet__team--top">
+                    <div class="row">
+                        <img class="meet__team__img__small--1"src="img/pictograms/meet_facebook.png"/>
+                        <img class="meet__team__img__small--2"src="img/pictograms/meet_twitter.png"/>
+                        <img class="meet__team__img__small--3"src="img/pictograms/meet_pinterest.png"/>
+                        <img class="meet__team__img__small--3"src="img/pictograms/meet_instagram.png"/>
+                    </div>
+                </div>
+            <div class="meet__team--people meet__team--people--2">
+            </div>
+
+            <div class="row meet__name">
+                <div class="col-sm-4 col-xs-12">
+                    <div class="row meet__name--name">CHRISTOPHER&nbsp;CAMPBELL</div>
+                    <div class="row meet__name--work">Branding/UX&nbsp;design</div>
+                </div>
+            </div>
+
+        </div>
+
+
+        <div class="col-sm-4 col-xs-12">
+            <div class="meet__team--back"></div>
+                <div class="meet__team--top">
+                    <div class="row">
+                        <img class="meet__team__img__small--1"src="img/pictograms/meet_facebook.png"/>
+                        <img class="meet__team__img__small--2"src="img/pictograms/meet_twitter.png"/>
+                        <img class="meet__team__img__small--3"src="img/pictograms/meet_pinterest.png"/>
+                        <img class="meet__team__img__small--3"src="img/pictograms/meet_instagram.png"/>
+                    </div>
+                </div>
+            <div class="meet__team--people meet__team--people--3">
+            </div>
+            <div class="row meet__name">
+                <div class="col-sm-4 col-xs-12">
+                    <div class="row meet__name--name">MICHAEL&nbsp;FERTIG</div>
+                    <div class="row meet__name--work">Developer</div>
+                </div>
+        </div>
+
+
+        </div>
+    </div>
+    </div>
+        <!--<div class="row  meet__team">
+
+
+            <div class="meet__team--img">
+                <img src="img/meet_img_1.png"/>
+            </div>
+
+
+
+            <!--<div class="meet__team__img__small">
+                <img class="meet__team__img__small--1"src="img/pictograms/meet_facebook.png"/>
+                <img class="meet__team__img__small--2"src="img/pictograms/meet_twitter.png"/>
+                <img class="meet__team__img__small--2"src="img/pictograms/meet_pinterest.png"/>
+                <img class="meet__team__img__small--2"src="img/pictograms/meet_instagram.png"/>
+                </div>
+            </div>
+
+        </div>-->
 
            <!--<div class="row meet__team__name">MATTEW DIX</div>
-           <div class="row meet__team__work">Graphic Design</div> -->
-    </div>
-       <div class="col-sm-4 col-xs-12">
+           <div class="row meet__team__work">Graphic Design</div>
+    </div> -->
+       <!--<div class="col-sm-4 col-xs-12">
            <div class="row">
                <div class="meet__team__img">
                    <img src="img/meet_img_2.png"/>
@@ -224,9 +280,7 @@
            <div class="row meet__team__name">MICHAEL FERTIG</div>
            <div class="row meet__team__work">Developer</div>
        </div>
-    </div>
-</div>
-
+    </div>-->
 
 
     <div class="container-fluid logos">
@@ -254,25 +308,32 @@
     </div>
 </div>
 
-    <div class="container-fluid work" id="work">
-    <p class="work__title__top">What we do</p>
-    <p class="work__title__middle">SOME OF OUR WORK</p>
-    <div class="row">
-        <img class="work_rectangle" src="img/pictograms/meet_rectangle.png"/>
-    </div>
-    <div class="row">
-        <span class="work__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            Ut enim ad minim</br>veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commondo consequat.</span>
-    </div>
+    <div class="container-fluid work">
+
+        <p class="work--top">What we do</p>
+        <p class="work--middle">SOME OF OUR WORK</p>
+        <div class="row work__center">
+            <img class="work__center--rectangle" src="img/pictograms/meet_rectangle.png"/>
+        </div>
+        <div class="row work__center">
+            <span class="work__center--text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                Ut enim ad minim</br>veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commondo consequat.</span>
+        </div>
 
     <div class="row work__picture">
         <div class="col-sm-3 col-xs-6">
-            <div class="work__picture__overlay">
+
+            <figure class="work__picture__overlay">
                 <img src="img/work11.png"/>
-                <img class="work__picture__small" src="img/pictograms/work_22_picture.png"/>
-                <p class="work__picture__text__bold">CREATIVELY DESIGNED</p>
-                <p class="work__picture__text__small">Lorem ipsum dolar sit</p>
-            </div>
+                <figcaption>
+                    <img class="work__picture__small" src="img/pictograms/work_22_picture.png"/>
+                    <p class="work__picture__text__bold">CREATIVELY DESIGNED</p>
+                    <p class="work__picture__text__small">Lorem ipsum dolar sit</p>
+                </figcaption>
+            </figure>
+
+
+
             <div class="work__picture__overlay work__picture__bottom">
                 <img src="img/work12.png"/>
                 <img class="work__picture__small" src="img/pictograms/work_22_picture.png"/>
@@ -320,15 +381,13 @@
             </div>
         </div>
     </div>
-</div>
+    </div>
 
-<div class="container testimontial">
-
+    <div class="container testimontial">
     <div class="row testimontial__slider">
         <div class="col-xs-2 testimontial__slider--left" onclick="plus(-1)">
             <img src="img/pictograms/testimontial_arrowleft.png"/>
         </div>
-
         <div class="testimontial__slider--page">
             <div class="col-sm-2 col-xs-10 testimontial__slider--page--img">
                 <img src="img/testimontial_1.png"/>
@@ -342,9 +401,7 @@
                     <span class="testimontial__slider--page--name--name">Joshua Earle</span>
                 </div>
             </div>
-
         </div>
-
         <div class="testimontial__slider--page">
             <div class="col-sm-2 col-xs-10 testimontial__slider--page--img">
                 <img src="img/testimontial_1.png"/>
@@ -358,9 +415,7 @@
                     <span class="testimontial__slider--page--name--name">Joshua Earle 2</span>
                 </div>
             </div>
-
         </div>
-
         <div class="testimontial__slider--page">
             <div class="col-sm-2 col-xs-10 testimontial__slider--page--img">
                 <img src="img/testimontial_1.png"/>
@@ -374,21 +429,13 @@
                     <span class="testimontial__slider--page--name--name">Joshua Earle 3</span>
                 </div>
             </div>
-
         </div>
-
-
         <div class="col-xs-1 testimontial__slider--right" onclick="plus(1)">
             <img src="img/pictograms/testimontial_arrowright.png"/>
         </div>
     </div>
-
-
-
-
-
-
 </div>
+
     <div class="container-fluid say">
     <img class="say--back" src="img/people_back.png"/>
     <div class="say__title">
