--- a/index.html
+++ b/index.html
@@ -177,18 +177,18 @@
            </div>
                <div class="meet__team--top">
                    <div class="row">
-                       <img class="meet__team__img__small--1"src="img/pictograms/meet_facebook.png"/>
-                       <img class="meet__team__img__small--2"src="img/pictograms/meet_twitter.png"/>
-                       <img class="meet__team__img__small--3"src="img/pictograms/meet_pinterest.png"/>
-                       <img class="meet__team__img__small--3"src="img/pictograms/meet_instagram.png"/>
+                       <img class="meet__team--top--1"src="img/pictograms/meet_facebook.png"/>
+                       <img class="meet__team--top--2"src="img/pictograms/meet_twitter.png"/>
+                       <img class="meet__team--top--3"src="img/pictograms/meet_pinterest.png"/>
+                       <img class="meet__team--top--3"src="img/pictograms/meet_instagram.png"/>
                    </div>
                </div>
            <div class="meet__team--people meet__team--people--1">
            </div>
-           <div class="row meet__name">
+           <div class="row meet__name--xs">
                <div class="col-sm-4 col-xs-12">
-                   <div class="row meet__name--name">MATTEW&nbsp;DIX</div>
-                   <div class="row meet__name--work">Graphic&nbsp;Design</div>
+                   <div class="row meet__name--xs--name">MATTEW DIX</div>
+                   <div class="row meet__name--xs--work">Graphic Design</div>
                </div>
            </div>
         </div>
@@ -197,22 +197,21 @@
             <div class="meet__team--back"></div>
                 <div class="meet__team--top">
                     <div class="row">
-                        <img class="meet__team__img__small--1"src="img/pictograms/meet_facebook.png"/>
-                        <img class="meet__team__img__small--2"src="img/pictograms/meet_twitter.png"/>
-                        <img class="meet__team__img__small--3"src="img/pictograms/meet_pinterest.png"/>
-                        <img class="meet__team__img__small--3"src="img/pictograms/meet_instagram.png"/>
+                        <img class="meet__team--top--1"src="img/pictograms/meet_facebook.png"/>
+                        <img class="meet__team--top--2"src="img/pictograms/meet_twitter.png"/>
+                        <img class="meet__team--top--3"src="img/pictograms/meet_pinterest.png"/>
+                        <img class="meet__team--top--3"src="img/pictograms/meet_instagram.png"/>
                     </div>
                 </div>
             <div class="meet__team--people meet__team--people--2">
             </div>
 
-            <div class="row meet__name">
+            <div class="row meet__name--xs">
                 <div class="col-sm-4 col-xs-12">
-                    <div class="row meet__name--name">CHRISTOPHER&nbsp;CAMPBELL</div>
-                    <div class="row meet__name--work">Branding/UX&nbsp;design</div>
+                    <div class="row meet__name--xs--name">CHRISTOPHER CAMPBELL</div>
+                    <div class="row meet__name--xs--work">Branding/UX design</div>
                 </div>
             </div>
-
         </div>
 
 
@@ -220,67 +219,38 @@
             <div class="meet__team--back"></div>
                 <div class="meet__team--top">
                     <div class="row">
-                        <img class="meet__team__img__small--1"src="img/pictograms/meet_facebook.png"/>
-                        <img class="meet__team__img__small--2"src="img/pictograms/meet_twitter.png"/>
-                        <img class="meet__team__img__small--3"src="img/pictograms/meet_pinterest.png"/>
-                        <img class="meet__team__img__small--3"src="img/pictograms/meet_instagram.png"/>
+                        <img class="meet__team--top--1"src="img/pictograms/meet_facebook.png"/>
+                        <img class="meet__team--top--2"src="img/pictograms/meet_twitter.png"/>
+                        <img class="meet__team--top--3"src="img/pictograms/meet_pinterest.png"/>
+                        <img class="meet__team--top--3"src="img/pictograms/meet_instagram.png"/>
                     </div>
                 </div>
             <div class="meet__team--people meet__team--people--3">
             </div>
-            <div class="row meet__name">
+            <div class="row meet__name--xs">
                 <div class="col-sm-4 col-xs-12">
-                    <div class="row meet__name--name">MICHAEL&nbsp;FERTIG</div>
-                    <div class="row meet__name--work">Developer</div>
-                </div>
-        </div>
-
-
-        </div>
-    </div>
-    </div>
-        <!--<div class="row  meet__team">
-
-
-            <div class="meet__team--img">
-                <img src="img/meet_img_1.png"/>
-            </div>
-
-
-
-            <!--<div class="meet__team__img__small">
-                <img class="meet__team__img__small--1"src="img/pictograms/meet_facebook.png"/>
-                <img class="meet__team__img__small--2"src="img/pictograms/meet_twitter.png"/>
-                <img class="meet__team__img__small--2"src="img/pictograms/meet_pinterest.png"/>
-                <img class="meet__team__img__small--2"src="img/pictograms/meet_instagram.png"/>
+                    <div class="row meet__name--xs--name">MICHAEL FERTIG</div>
+                    <div class="row meet__name--xs--work">Developer</div>
                 </div>
             </div>
+        </div>
+    </div>
+        <div class="row meet__name">
+            <div class="col-sm-4 col-xs-12">
+                <div class="row meet__name--name">MATTEW DIX</div>
+                <div class="row meet__name--work">Graphic Design</div>
+            </div>
 
-        </div>-->
-
-           <!--<div class="row meet__team__name">MATTEW DIX</div>
-           <div class="row meet__team__work">Graphic Design</div>
-    </div> -->
-       <!--<div class="col-sm-4 col-xs-12">
-           <div class="row">
-               <div class="meet__team__img">
-                   <img src="img/meet_img_2.png"/>
-
-
-
-               </div>
-           </div>
-           <div class="row meet__team__name">CHRISTOPHER CAMPBELL</div>
-           <div class="row meet__team__work">Branding/UX design</div>
-       </div>
-       <div class="col-sm-4 col-xs-12">
-           <div class="row">
-               <div class="meet__team__img"><img src="img/meet_img_3.png"/></div>
-           </div>
-           <div class="row meet__team__name">MICHAEL FERTIG</div>
-           <div class="row meet__team__work">Developer</div>
-       </div>
-    </div>-->
+            <div class="col-sm-4 col-xs-12">
+                <div class="row meet__name--name">CHRISTOPHER CAMPBELL</div>
+                <div class="row meet__name--work">Branding/UX design</div>
+            </div>
+            <div class="col-sm-4 col-xs-12">
+                <div class="row meet__name--name">MICHAEL FERTIG</div>
+                <div class="row meet__name--work">Developer</div>
+            </div>
+        </div>
+    </div>
 
 
     <div class="container-fluid logos">
