about-us gellerystill needs some fixes

--- a/index.html
+++ b/index.html
@@ -144,25 +144,45 @@
         </div>
       </div>
       <div class="row text-center about__gallery">
-        <div class="col-xs-12 col-sm-4">
-          <div class="about__gallery--first text-center img">
-            <img class="about__gallery__img--bg" />
-            <!--<img class="about__gallery__img--pic--1"/>
-            <div class="about__gallery__text">
-              Super team
-            </div>-->
+
+        <div class="col-xs-12 col-sm-4 wrapper">
+          <div class="about__gallery--bg">
+
+          </div>
+          <div class="about__gallery--top">
+            <div class="row">
+              <img class="img-responsive" src="./img/pictograms/aboutus_pic1_icon.png" alt="">
+              <span>Super team</span>
+            </div>
+          </div>
+          <div class="about__gallery__img about__gallery__img--1">
           </div>
         </div>
-        <div class="col-xs-12 col-sm-4">
-          <div class="about__gallery--second img">
-            <img class="about__gallery__img--bg" />
-            <img class="about__gallery__img--pic--2" />
+
+        <div class="col-xs-12 col-sm-4 wrapper">
+          <div class="about__gallery--bg">
+          </div>
+          <div class="about__gallery--top">
+            <div class="row">
+              <img class="img-responsive" src="./img/pictograms/aboutus_pic1_icon.png" alt="">
+              <span>Super team</span>
+            </div>
+          </div>
+          <div class="about__gallery__img about__gallery__img--2">
           </div>
         </div>
-        <div class="col-xs-12 col-sm-4">
-          <div class="about__gallery--third img">
-            <img class="about__gallery__img--bg" />
-            <img class="about__gallery__img--pic--3" />
+
+        <div class="col-xs-12 col-sm-4 wrapper">
+          <div class="about__gallery--bg">
+
+          </div>
+          <div class="about__gallery--top">
+            <div class="row">
+              <img class="img-responsive" src="./img/pictograms/aboutus_pic1_icon.png" alt="">
+              <span>Super team</span>
+            </div>
+          </div>
+          <div class="about__gallery__img about__gallery__img--3">
           </div>
         </div>
       </div>
