TODO: menu, gallery, slider

--- a/index.html
+++ b/index.html
@@ -400,6 +400,85 @@
 
 
 
+    <div class="container-fluid" id="carousel1">
+
+      <div id="myCarousel" class="carousel slide" data-ride="carousel">
+
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner">
+          <div class="item active">
+            <div class="carousel__slide">
+              <div class="col-xs-1 col-sm-4"></div>
+              <div class="col-xs-2 col-sm-1 carousel__slide--img">
+                <img src="img/pictograms/quote_pic.png" />
+              </div>
+              <div class="col-xs-8 col-sm-3">
+                <div class="row carousel__slide--text">
+                  "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut laboer et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation."
+                </div>
+                <div class="row carousel__slide--name">
+                  <img src="img/pictograms/meet_rectangle.png" />
+                  <span class="name">John Doe</span>
+                </div>
+              </div>
+              <div class="col-xs-1 col-sm-4"></div>
+            </div>
+          </div>
+
+          <div class="item">
+            <div class="carousel__slide">
+              <div class="col-xs-4"></div>
+              <div class="col-xs-1 carousel__slide--img">
+                <img src="img/pictograms/quote_pic.png" />
+              </div>
+              <div class="col-xs-3">
+                <div class="row carousel__slide--text">
+                  "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut laboer et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation."
+                </div>
+                <div class="row carousel__slide--name">
+                  <img src="img/pictograms/meet_rectangle.png" />
+                  <span class="name">John Doe</span>
+                </div>
+              </div>
+              <div class="col-xs-4"></div>
+            </div>
+          </div>
+
+          <div class="item">
+            <div class="carousel__slide">
+              <div class="col-xs-4"></div>
+              <div class="col-xs-1 carousel__slide--img">
+                <img src="img/pictograms/quote_pic.png" />
+              </div>
+              <div class="col-xs-3">
+                <div class="row carousel__slide--text">
+                  "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut laboer et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation."
+                </div>
+                <div class="row carousel__slide--name">
+                  <img src="img/pictograms/meet_rectangle.png" />
+                  <span class="name">John Doe</span>
+                </div>
+              </div>
+              <div class="col-xs-4"></div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Left and right controls -->
+        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+          <img src="img/pictograms/testimontial_arrowleft.png" />
+
+        </a>
+        <a class="right carousel-control" href="#myCarousel" data-slide="next">
+          <img src="img/pictograms/testimontial_arrowright.png" />
+
+        </a>
+      </div>
+    </div>
+
+
+
+
     <div class="container meet">
       <p class="meet__title__top">Who we are</p>
       <p class="meet__title__middle">MEET OUR TEAM</p>
