--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>Macopedia - TASK 2</title>
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/style.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+    <!--<link href="css/style.min.css" rel="stylesheet">-->
     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:900" rel="stylesheet">
@@ -519,10 +520,10 @@
             </div>
             <div class="meet__team--top">
                 <div class="row">
-                    <img class="meet__team--top--1" src="img/pictograms/meet_facebook.png"/>
-                    <img class="meet__team--top--2" src="img/pictograms/meet_twitter.png"/>
-                    <img class="meet__team--top--3" src="img/pictograms/meet_pinterest.png"/>
-                    <img class="meet__team--top--3" src="img/pictograms/meet_instagram.png"/>
+                    <a href="http://www.facebook.com"><img class="meet__team--top--1" src="img/pictograms/meet_facebook.png"/></a>
+                    <a href="http://twitter.com"><img class="meet__team--top--2" src="img/pictograms/meet_twitter.png"/></a>
+                    <a href="http://www.pinterest.com"><img class="meet__team--top--3" src="img/pictograms/meet_pinterest.png"/></a>
+                    <a href="http://www.instagram.com"><img class="meet__team--top--3" src="img/pictograms/meet_instagram.png"/></a>
                 </div>
             </div>
             <div class="meet__team--people meet__team--people--1">
@@ -539,10 +540,10 @@
             <div class="meet__team--back"></div>
             <div class="meet__team--top">
                 <div class="row">
-                    <img class="meet__team--top--1" src="img/pictograms/meet_facebook.png"/>
-                    <img class="meet__team--top--2" src="img/pictograms/meet_twitter.png"/>
-                    <img class="meet__team--top--3" src="img/pictograms/meet_pinterest.png"/>
-                    <img class="meet__team--top--3" src="img/pictograms/meet_instagram.png"/>
+                    <a href="http://www.facebook.com"><img class="meet__team--top--1" src="img/pictograms/meet_facebook.png"/></a>
+                    <a href="http://twitter.com"><img class="meet__team--top--2" src="img/pictograms/meet_twitter.png"/></a>
+                    <a href="http://www.pinterest.com"><img class="meet__team--top--3" src="img/pictograms/meet_pinterest.png"/></a>
+                    <a href="http://www.instagram.com"><img class="meet__team--top--3" src="img/pictograms/meet_instagram.png"/></a>
                 </div>
             </div>
             <div class="meet__team--people meet__team--people--2">
@@ -561,10 +562,10 @@
             <div class="meet__team--back"></div>
             <div class="meet__team--top">
                 <div class="row">
-                    <img class="meet__team--top--1" src="img/pictograms/meet_facebook.png"/>
-                    <img class="meet__team--top--2" src="img/pictograms/meet_twitter.png"/>
-                    <img class="meet__team--top--3" src="img/pictograms/meet_pinterest.png"/>
-                    <img class="meet__team--top--3" src="img/pictograms/meet_instagram.png"/>
+                    <a href="http://www.facebook.com"><img class="meet__team--top--1" src="img/pictograms/meet_facebook.png"/></a>
+                    <a href="http://twitter.com"><img class="meet__team--top--2" src="img/pictograms/meet_twitter.png"/></a>
+                    <a href="http://www.pinterest.com"><img class="meet__team--top--3" src="img/pictograms/meet_pinterest.png"/></a>
+                    <a href="http://www.instagram.com"><img class="meet__team--top--3" src="img/pictograms/meet_instagram.png"/></a>
                 </div>
             </div>
             <div class="meet__team--people meet__team--people--3">
@@ -599,22 +600,22 @@
     <div class="container">
         <div class="row logos__row">
             <div class="col-md-2 col-xs-4">
-                <img src="img/logo1.png"/>
+                <img class="img-responsive"src="img/logo1.png"/>
             </div>
             <div class="col-md-2 col-xs-4">
-                <img src="img/logo2.png"/>
+                <img class="img-responsive" src="img/logo2.png"/>
             </div>
             <div class="col-md-2 col-xs-4">
-                <img src="img/logo3.png"/>
+                <img class="img-responsive" src="img/logo3.png"/>
             </div>
             <div class="col-md-2 col-xs-4">
-                <img src="img/logo4.png"/>
+                <img class="img-responsive" src="img/logo4.png"/>
             </div>
             <div class="col-md-2 col-xs-4">
-                <img src="img/logo5.png"/>
+                <img class="img-responsive" src="img/logo5.png"/>
             </div>
             <div class="col-md-2 col-xs-4">
-                <img src="img/logo6.png"/>
+                <img class="img-responsive" src="img/logo6.png"/>
             </div>
         </div>
     </div>
@@ -785,6 +786,7 @@
 </div>
 
 <div class="container-fluid say">
+    <div class="container">
     <img class="say--back" src="img/people_back.png"/>
     <div class="say__title">
         <p class="say__title--top">Happy Clients</p>
@@ -793,8 +795,7 @@
     </div>
 
     <div class="row say__client">
-        <div class="col-md-1"></div>
-        <div class="col-md-1 col-xs-4 say__client--img">
+        <div class="col-md-2 col-xs-4 say__client--img">
             <img src="img/people1.png"/>
         </div>
         <div class="col-md-3 col-xs-8">
@@ -811,8 +812,7 @@
                 <span>Lorem ipsum dolar sit amet, consectetuer adipiscing elit, sed do eiusmod tempor incidicunt ut labore et dolore magna aliqua. Ut enim ad minim.</span>
             </div>
         </div>
-        <div class="col-md-1"></div>
-        <div class="col-md-1 col-xs-4 say__client--img">
+        <div class="col-md-2 col-xs-4 say__client--img">
             <img src="img/people2.png"/>
         </div>
         <div class="col-md-3 col-xs-8">
@@ -832,8 +832,7 @@
 
     </div>
     <div class="row say__client">
-        <div class="col-md-1"></div>
-        <div class="col-md-1 col-xs-4 say__client--img">
+        <div class="col-md-2 col-xs-4 say__client--img">
             <img src="img/people3.png"/>
         </div>
         <div class="col-md-3 col-xs-8">
@@ -850,8 +849,7 @@
                 <span>Lorem ipsum dolar sit amet, consectetuer adipiscing elit, sed do eiusmod tempor incidicunt ut labore et dolore magna aliqua. Ut enim ad minim.</span>
             </div>
         </div>
-        <div class="col-md-1"></div>
-        <div class="col-md-1 col-xs-4 say__client--img">
+        <div class="col-md-2 col-xs-4 say__client--img">
             <img src="img/people4.png"/>
         </div>
         <div class="col-md-3 col-xs-8">
@@ -869,6 +867,7 @@
             </div>
         </div>
     </div>
+    </div>
 </div>
 
 <div class="container blog">
@@ -879,9 +878,9 @@
     </div>
 
     <div class="row blog__img">
-        <div class="col-md-4 col-xs-12 blog__img--margin--1">
+        <div class="col-sm-3 col-xs-offset-1 col-xs-11 blog__img">
             <figure class="row blog__img--img">
-                <img src="img/blog1.png"/>
+                <img class="img-responsive" src="img/blog1.png"/>
                 <figcaption>
                     <p class="blog__img--img--1">15</p>
                     <p class="blog__img--img--2">Jan</p>
@@ -899,9 +898,9 @@
             </div>
         </div>
 
-        <div class="col-md-4 col-xs-12  blog__img--margin--2">
+        <div class="col-sm-3  col-xs-offset-1 col-xs-11  blog__img">
             <figure class="row blog__img--img">
-                <img src="img/blog2.png"/>
+                <img  class="img-responsive" src="img/blog2.png"/>
                 <figcaption>
                     <p class="blog__img--img--1">14</p>
                     <p class="blog__img--img--2">Jan</p>
@@ -919,9 +918,9 @@
             </div>
         </div>
 
-        <div class="col-md-4 col-xs-12 blog__img--margin--2">
+        <div class="col-sm-3  col-xs-offset-1 col-xs-11 blog__img">
             <figure class="row blog__img--img">
-                <img src="img/blog3.png"/>
+                <img  class="img-responsive" src="img/blog3.png"/>
                 <figcaption>
                     <p class="blog__img--img--1">12</p>
                     <p class="blog__img--img--2">Jan</p>
@@ -1044,7 +1043,6 @@
         <div class="foot__3--foot">
             MoGo free PSD template by <span class="foot__3--foot--color">Laaqiq</span>
         </div>
-
     </div>
 </footer>
 
