--- a/index.html
+++ b/index.html
@@ -501,12 +501,11 @@
 
 
 <div class="container meet">
-    <p class="meet__title__top">Who we are</p>
-    <p class="meet__title__middle">MEET OUR TEAM</p>
-    <div class="row">
-        <img class="meet__rectangle" src="img/pictograms/meet_rectangle.png"/>
+    <div class="page-title">
+        <h3 class="page-title__main">Who we are</h3>
+        <h2 class="page-title__subtitle">MEET OUR TEAM</h2>
+        <span class="page-title__bar"></span>
     </div>
-
     <div class="row">
         <span class="meet__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
             sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim </br>veniam, quis
@@ -516,79 +515,72 @@
     <div class="row meet__team">
         <div class="col-sm-4 col-xs-12">
             <div class="meet__team--back">
-
             </div>
-            <div class="meet__team--top">
-                <div class="row">
-                    <a href="http://www.facebook.com"><img class="meet__team--top--1" src="img/pictograms/meet_facebook.png"/></a>
-                    <a href="http://twitter.com"><img class="meet__team--top--2" src="img/pictograms/meet_twitter.png"/></a>
-                    <a href="http://www.pinterest.com"><img class="meet__team--top--3" src="img/pictograms/meet_pinterest.png"/></a>
-                    <a href="http://www.instagram.com"><img class="meet__team--top--3" src="img/pictograms/meet_instagram.png"/></a>
-                </div>
+            <div class="meet__team--background">
+            <div class="meet__team--imgs">
+                    <a  class="meet__team--img" href="http://www.facebook.com"><img src="img/pictograms/meet_facebook.png"/></a>
+                    <a  class="meet__team--img" href="http://twitter.com"><img src="img/pictograms/meet_twitter.png"/></a>
+                    <a  class="meet__team--img" href="http://www.pinterest.com"><img src="img/pictograms/meet_pinterest.png"/></a>
+                    <a  class="meet__team--img" href="http://www.instagram.com"><img src="img/pictograms/meet_instagram.png"/></a>
+            </div>
             </div>
             <div class="meet__team--people meet__team--people--1">
             </div>
             <div class="row meet__name--xs">
-                <div class="col-sm-4 col-xs-12">
                     <div class="row meet__name--xs--name">MATTEW DIX</div>
                     <div class="row meet__name--xs--work">Graphic Design</div>
-                </div>
             </div>
         </div>
 
         <div class="col-sm-4 col-xs-12">
             <div class="meet__team--back"></div>
-            <div class="meet__team--top">
-                <div class="row">
-                    <a href="http://www.facebook.com"><img class="meet__team--top--1" src="img/pictograms/meet_facebook.png"/></a>
-                    <a href="http://twitter.com"><img class="meet__team--top--2" src="img/pictograms/meet_twitter.png"/></a>
-                    <a href="http://www.pinterest.com"><img class="meet__team--top--3" src="img/pictograms/meet_pinterest.png"/></a>
-                    <a href="http://www.instagram.com"><img class="meet__team--top--3" src="img/pictograms/meet_instagram.png"/></a>
+            <div class="meet__team--background">
+                <div class="meet__team--imgs">
+                    <a  class="meet__team--img" href="http://www.facebook.com"><img src="img/pictograms/meet_facebook.png"/></a>
+                    <a  class="meet__team--img" href="http://twitter.com"><img src="img/pictograms/meet_twitter.png"/></a>
+                    <a  class="meet__team--img" href="http://www.pinterest.com"><img src="img/pictograms/meet_pinterest.png"/></a>
+                    <a  class="meet__team--img" href="http://www.instagram.com"><img src="img/pictograms/meet_instagram.png"/></a>
                 </div>
             </div>
             <div class="meet__team--people meet__team--people--2">
             </div>
 
             <div class="row meet__name--xs">
-                <div class="col-sm-4 col-xs-12">
                     <div class="row meet__name--xs--name">CHRISTOPHER CAMPBELL</div>
                     <div class="row meet__name--xs--work">Branding/UX design</div>
-                </div>
             </div>
         </div>
 
 
         <div class="col-sm-4 col-xs-12">
             <div class="meet__team--back"></div>
-            <div class="meet__team--top">
-                <div class="row">
-                    <a href="http://www.facebook.com"><img class="meet__team--top--1" src="img/pictograms/meet_facebook.png"/></a>
-                    <a href="http://twitter.com"><img class="meet__team--top--2" src="img/pictograms/meet_twitter.png"/></a>
-                    <a href="http://www.pinterest.com"><img class="meet__team--top--3" src="img/pictograms/meet_pinterest.png"/></a>
-                    <a href="http://www.instagram.com"><img class="meet__team--top--3" src="img/pictograms/meet_instagram.png"/></a>
+            <div class="meet__team--background">
+                <div class="meet__team--imgs">
+                    <a  class="meet__team--img" href="http://www.facebook.com"><img src="img/pictograms/meet_facebook.png"/></a>
+                    <a  class="meet__team--img" href="http://twitter.com"><img src="img/pictograms/meet_twitter.png"/></a>
+                    <a  class="meet__team--img" href="http://www.pinterest.com"><img src="img/pictograms/meet_pinterest.png"/></a>
+                    <a  class="meet__team--img" href="http://www.instagram.com"><img src="img/pictograms/meet_instagram.png"/></a>
                 </div>
             </div>
             <div class="meet__team--people meet__team--people--3">
             </div>
             <div class="row meet__name--xs">
-                <div class="col-sm-4 col-xs-12">
                     <div class="row meet__name--xs--name">MICHAEL FERTIG</div>
                     <div class="row meet__name--xs--work">Developer</div>
-                </div>
             </div>
         </div>
     </div>
     <div class="row meet__name">
-        <div class="col-sm-4 col-xs-12">
+        <div class="col-sm-4">
             <div class="row meet__name--name">MATTEW DIX</div>
             <div class="row meet__name--work">Graphic Design</div>
         </div>
 
-        <div class="col-sm-4 col-xs-12">
+        <div class="col-sm-4">
             <div class="row meet__name--name">CHRISTOPHER CAMPBELL</div>
             <div class="row meet__name--work">Branding/UX design</div>
         </div>
-        <div class="col-sm-4 col-xs-12">
+        <div class="col-sm-4">
             <div class="row meet__name--name">MICHAEL FERTIG</div>
             <div class="row meet__name--work">Developer</div>
         </div>
