--- a/index.html
+++ b/index.html
@@ -517,18 +517,22 @@
             <div class="meet__team--back">
             </div>
             <div class="meet__team--background">
-            <div class="meet__team--imgs">
-                    <a  class="meet__team--img" href="http://www.facebook.com"><img src="img/pictograms/meet_facebook.png"/></a>
-                    <a  class="meet__team--img" href="http://twitter.com"><img src="img/pictograms/meet_twitter.png"/></a>
-                    <a  class="meet__team--img" href="http://www.pinterest.com"><img src="img/pictograms/meet_pinterest.png"/></a>
-                    <a  class="meet__team--img" href="http://www.instagram.com"><img src="img/pictograms/meet_instagram.png"/></a>
-            </div>
+                <div class="meet__team--imgs">
+                    <a class="meet__team--img" href="http://www.facebook.com"><img
+                            src="img/pictograms/meet_facebook.png"/></a>
+                    <a class="meet__team--img" href="http://twitter.com"><img
+                            src="img/pictograms/meet_twitter.png"/></a>
+                    <a class="meet__team--img" href="http://www.pinterest.com"><img
+                            src="img/pictograms/meet_pinterest.png"/></a>
+                    <a class="meet__team--img" href="http://www.instagram.com"><img
+                            src="img/pictograms/meet_instagram.png"/></a>
+                </div>
             </div>
             <div class="meet__team--people meet__team--people--1">
             </div>
             <div class="row meet__name--xs">
-                    <div class="row meet__name--xs--name">MATTEW DIX</div>
-                    <div class="row meet__name--xs--work">Graphic Design</div>
+                <div class="row meet__name--xs--name">MATTEW DIX</div>
+                <div class="row meet__name--xs--work">Graphic Design</div>
             </div>
         </div>
 
@@ -536,18 +540,22 @@
             <div class="meet__team--back"></div>
             <div class="meet__team--background">
                 <div class="meet__team--imgs">
-                    <a  class="meet__team--img" href="http://www.facebook.com"><img src="img/pictograms/meet_facebook.png"/></a>
-                    <a  class="meet__team--img" href="http://twitter.com"><img src="img/pictograms/meet_twitter.png"/></a>
-                    <a  class="meet__team--img" href="http://www.pinterest.com"><img src="img/pictograms/meet_pinterest.png"/></a>
-                    <a  class="meet__team--img" href="http://www.instagram.com"><img src="img/pictograms/meet_instagram.png"/></a>
+                    <a class="meet__team--img" href="http://www.facebook.com"><img
+                            src="img/pictograms/meet_facebook.png"/></a>
+                    <a class="meet__team--img" href="http://twitter.com"><img
+                            src="img/pictograms/meet_twitter.png"/></a>
+                    <a class="meet__team--img" href="http://www.pinterest.com"><img
+                            src="img/pictograms/meet_pinterest.png"/></a>
+                    <a class="meet__team--img" href="http://www.instagram.com"><img
+                            src="img/pictograms/meet_instagram.png"/></a>
                 </div>
             </div>
             <div class="meet__team--people meet__team--people--2">
             </div>
 
             <div class="row meet__name--xs">
-                    <div class="row meet__name--xs--name">CHRISTOPHER CAMPBELL</div>
-                    <div class="row meet__name--xs--work">Branding/UX design</div>
+                <div class="row meet__name--xs--name">CHRISTOPHER CAMPBELL</div>
+                <div class="row meet__name--xs--work">Branding/UX design</div>
             </div>
         </div>
 
@@ -556,17 +564,21 @@
             <div class="meet__team--back"></div>
             <div class="meet__team--background">
                 <div class="meet__team--imgs">
-                    <a  class="meet__team--img" href="http://www.facebook.com"><img src="img/pictograms/meet_facebook.png"/></a>
-                    <a  class="meet__team--img" href="http://twitter.com"><img src="img/pictograms/meet_twitter.png"/></a>
-                    <a  class="meet__team--img" href="http://www.pinterest.com"><img src="img/pictograms/meet_pinterest.png"/></a>
-                    <a  class="meet__team--img" href="http://www.instagram.com"><img src="img/pictograms/meet_instagram.png"/></a>
+                    <a class="meet__team--img" href="http://www.facebook.com"><img
+                            src="img/pictograms/meet_facebook.png"/></a>
+                    <a class="meet__team--img" href="http://twitter.com"><img
+                            src="img/pictograms/meet_twitter.png"/></a>
+                    <a class="meet__team--img" href="http://www.pinterest.com"><img
+                            src="img/pictograms/meet_pinterest.png"/></a>
+                    <a class="meet__team--img" href="http://www.instagram.com"><img
+                            src="img/pictograms/meet_instagram.png"/></a>
                 </div>
             </div>
             <div class="meet__team--people meet__team--people--3">
             </div>
             <div class="row meet__name--xs">
-                    <div class="row meet__name--xs--name">MICHAEL FERTIG</div>
-                    <div class="row meet__name--xs--work">Developer</div>
+                <div class="row meet__name--xs--name">MICHAEL FERTIG</div>
+                <div class="row meet__name--xs--work">Developer</div>
             </div>
         </div>
     </div>
@@ -592,7 +604,7 @@
     <div class="container">
         <div class="row logos__row">
             <div class="col-md-2 col-xs-4">
-                <img class="img-responsive"src="img/logo1.png"/>
+                <img class="img-responsive" src="img/logo1.png"/>
             </div>
             <div class="col-md-2 col-xs-4">
                 <img class="img-responsive" src="img/logo2.png"/>
@@ -614,21 +626,18 @@
 </div>
 
 <div class="container-fluid work">
-
-    <p class="work--top">What we do</p>
-    <p class="work--middle">SOME OF OUR WORK</p>
-    <div class="row work__center">
-        <img class="work__center--rectangle" src="img/pictograms/meet_rectangle.png"/>
+    <div class="page-title">
+        <h3 class="page-title__main">What we do</h3>
+        <h2 class="page-title__subtitle">SOME OF OUR WORK</h2>
+        <span class="page-title__bar"></span>
     </div>
-    <div class="row work__center">
+    <div class="work__center">
             <span class="work__center--text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                 Ut enim ad minim</br>veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commondo consequat.</span>
     </div>
 
     <div class="row work__picture">
         <div class="col-sm-3 col-xs-6">
-
-
             <div class="work__picture--img">
                 <img src="img/work11.png"/>
                 <div class="work__picture--overlay">
@@ -778,87 +787,86 @@
 </div>
 
 <div class="container-fluid say">
+    <img class="say__background" src="img/people_back.png"/>
     <div class="container">
-    <img class="say--back" src="img/people_back.png"/>
-    <div class="say__title">
-        <p class="say__title--top">Happy Clients</p>
-        <p class="say__title--middle">WHAT PEOPLE SAY</p>
-        <img class="say__title--rectangle" src="img/pictograms/meet_rectangle.png"/>
-    </div>
+        <div class="page-title">
+            <h3 class="page-title__main">Happy Clients</h3>
+            <h2 class="page-title__subtitle">WHAT PEOPLE SAY</h2>
+            <span class="page-title__bar"></span>
+        </div>
+        <div class="row say__client">
+            <div class="col-md-2 col-xs-4 say__client--img">
+                <img src="img/people1.png"/>
+            </div>
+            <div class="col-md-4 col-xs-8">
+                <div class="row say__client--name">
+                    <span>MATTHEW DIX</span>
+                </div>
+                <div class="row say__client--job">
+                    <span>Graphic Design</span>
+                </div>
+                <div class="row">
+                    <img src="img/pictograms/meet_rectangle.png"/>
+                </div>
+                <div class="row say__client--text">
+                    <span>Lorem ipsum dolar sit amet, consectetuer adipiscing elit, sed do eiusmod tempor incidicunt ut labore et dolore magna aliqua. Ut enim ad minim.</span>
+                </div>
+            </div>
+            <div class="col-md-2 col-xs-4 say__client--img">
+                <img src="img/people2.png"/>
+            </div>
+            <div class="col-md-4 col-xs-8">
+                <div class="row say__client--name">
+                    <span>NICK KARVOUNIS</span>
+                </div>
+                <div class="row say__client--job">
+                    <span>Graphic Design</span>
+                </div>
+                <div class="row">
+                    <img src="img/pictograms/meet_rectangle.png"/>
+                </div>
+                <div class="row say__client--text">
+                    <span>Lorem ipsum dolar sit amet, consectetuer adipiscing elit, sed do eiusmod tempor incidicunt ut labore et dolore magna aliqua. Ut enim ad minim.</span>
+                </div>
+            </div>
 
-    <div class="row say__client">
-        <div class="col-md-2 col-xs-3 say__client--img">
-            <img src="img/people1.png"/>
         </div>
-        <div class="col-md-3 col-xs-9">
-            <div class="row say__client--name">
-                <span>MATTHEW DIX</span>
+        <div class="row say__client">
+            <div class="col-md-2 col-xs-4 say__client--img">
+                <img src="img/people3.png"/>
             </div>
-            <div class="row say__client--job">
-                <span>Graphic Design</span>
+            <div class="col-md-4 col-xs-8">
+                <div class="row say__client--name">
+                    <span>JAELYNN CASTILLO</span>
+                </div>
+                <div class="row say__client--job">
+                    <span>Graphic Design</span>
+                </div>
+                <div class="row">
+                    <img src="img/pictograms/meet_rectangle.png"/>
+                </div>
+                <div class="row say__client--text">
+                    <span>Lorem ipsum dolar sit amet, consectetuer adipiscing elit, sed do eiusmod tempor incidicunt ut labore et dolore magna aliqua. Ut enim ad minim.</span>
+                </div>
             </div>
-            <div class="row">
-                <img src="img/pictograms/meet_rectangle.png"/>
+            <div class="col-md-2 col-xs-4 say__client--img">
+                <img src="img/people4.png"/>
             </div>
-            <div class="row say__client--text">
-                <span>Lorem ipsum dolar sit amet, consectetuer adipiscing elit, sed do eiusmod tempor incidicunt ut labore et dolore magna aliqua. Ut enim ad minim.</span>
-            </div>
-        </div>
-        <div class="col-md-2 col-xs-3 say__client--img">
-            <img src="img/people2.png"/>
-        </div>
-        <div class="col-md-3 col-xs-9">
-            <div class="row say__client--name">
-                <span>NICK KARVOUNIS</span>
-            </div>
-            <div class="row say__client--job">
-                <span>Graphic Design</span>
-            </div>
-            <div class="row">
-                <img src="img/pictograms/meet_rectangle.png"/>
-            </div>
-            <div class="row say__client--text">
-                <span>Lorem ipsum dolar sit amet, consectetuer adipiscing elit, sed do eiusmod tempor incidicunt ut labore et dolore magna aliqua. Ut enim ad minim.</span>
-            </div>
-        </div>
-
-    </div>
-    <div class="row say__client">
-        <div class="col-md-2 col-xs-3 say__client--img">
-            <img src="img/people3.png"/>
-        </div>
-        <div class="col-md-3 col-xs-9">
-            <div class="row say__client--name">
-                <span>JAELYNN CASTILLO</span>
-            </div>
-            <div class="row say__client--job">
-                <span>Graphic Design</span>
-            </div>
-            <div class="row">
-                <img src="img/pictograms/meet_rectangle.png"/>
-            </div>
-            <div class="row say__client--text">
-                <span>Lorem ipsum dolar sit amet, consectetuer adipiscing elit, sed do eiusmod tempor incidicunt ut labore et dolore magna aliqua. Ut enim ad minim.</span>
+            <div class="col-md-4 col-xs-8">
+                <div class="row say__client--name">
+                    <span>MIKE PETRUCCI</span>
+                </div>
+                <div class="row say__client--job">
+                    <span>Graphic Design</span>
+                </div>
+                <div class="row">
+                    <img src="img/pictograms/meet_rectangle.png"/>
+                </div>
+                <div class="row say__client--text">
+                    <span>Lorem ipsum dolar sit amet, consectetuer adipiscing elit, sed do eiusmod tempor incidicunt ut labore et dolore magna aliqua. Ut enim ad minim.</span>
+                </div>
             </div>
         </div>
-        <div class="col-md-2 col-xs-3 say__client--img">
-            <img src="img/people4.png"/>
-        </div>
-        <div class="col-md-3 col-xs-9">
-            <div class="row say__client--name">
-                <span>MIKE PETRUCCI</span>
-            </div>
-            <div class="row say__client--job">
-                <span>Graphic Design</span>
-            </div>
-            <div class="row">
-                <img src="img/pictograms/meet_rectangle.png"/>
-            </div>
-            <div class="row say__client--text">
-                <span>Lorem ipsum dolar sit amet, consectetuer adipiscing elit, sed do eiusmod tempor incidicunt ut labore et dolore magna aliqua. Ut enim ad minim.</span>
-            </div>
-        </div>
-    </div>
     </div>
 </div>
 
@@ -892,7 +900,7 @@
 
         <div class="col-sm-3  col-xs-offset-1 col-xs-11  blog__img">
             <figure class="row blog__img--img">
-                <img  class="img-responsive" src="img/blog2.png"/>
+                <img class="img-responsive" src="img/blog2.png"/>
                 <figcaption>
                     <p class="blog__img--img--1">14</p>
                     <p class="blog__img--img--2">Jan</p>
@@ -912,7 +920,7 @@
 
         <div class="col-sm-3  col-xs-offset-1 col-xs-11 blog__img">
             <figure class="row blog__img--img">
-                <img  class="img-responsive" src="img/blog3.png"/>
+                <img class="img-responsive" src="img/blog3.png"/>
                 <figcaption>
                     <p class="blog__img--img--1">12</p>
                     <p class="blog__img--img--2">Jan</p>
