Changes in title pages

--- a/index.html
+++ b/index.html
@@ -505,13 +505,12 @@
         <h3 class="page-title__main">Who we are</h3>
         <h2 class="page-title__subtitle">MEET OUR TEAM</h2>
         <span class="page-title__bar"></span>
-    </div>
-    <div class="row">
-        <span class="meet__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+        <p class="page-title__text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit,
             sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim </br>veniam, quis
-            nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</span>
+            nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        </p>
     </div>
-
     <div class="row meet__team">
         <div class="col-sm-4 col-xs-12">
             <div class="meet__team--back">
@@ -630,12 +629,11 @@
         <h3 class="page-title__main">What we do</h3>
         <h2 class="page-title__subtitle">SOME OF OUR WORK</h2>
         <span class="page-title__bar"></span>
+        <p class="page-title__text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            Ut enim ad minim</br>veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commondo consequat.
+        </p>
     </div>
-    <div class="work__center">
-            <span class="work__center--text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim</br>veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commondo consequat.</span>
-    </div>
-
     <div class="row work__picture">
         <div class="col-sm-3 col-xs-6">
             <div class="work__picture--img">
@@ -871,10 +869,10 @@
 </div>
 
 <div class="container blog">
-    <div class="blog__title">
-        <p class="blog__title--top">Our stories</p>
-        <p class="blog__title--middle">LATEST BLOG</p>
-        <img class="blog__title--rectangle" src="img/pictograms/meet_rectangle.png"/>
+    <div class="page-title">
+        <h3 class="page-title__main">Our stories</h3>
+        <h2 class="page-title__subtitle">LATEST BLOG</h2>
+        <span class="page-title__bar"></span>
     </div>
 
     <div class="row blog__img">
