Changes id BLOG,MAP(doc)

--- a/index.html
+++ b/index.html
@@ -876,19 +876,20 @@
     </div>
 
     <div class="row blog__img">
-        <div class="col-sm-3 col-xs-offset-1 col-xs-11 blog__img">
-            <figure class="row blog__img--img">
+
+        <div class="col-sm-4 col-xs-12 blog__news">
+            <figure class="row">
                 <img class="img-responsive" src="img/blog1.png"/>
                 <figcaption>
-                    <p class="blog__img--img--1">15</p>
-                    <p class="blog__img--img--2">Jan</p>
+                    <p class="blog__news--day">15</p>
+                    <p class="blog__news--month">Jan</p>
                 </figcaption>
             </figure>
-            <p class="blog__img--top">LOREM IPSUM DOLOR SIT AMET</p>
-            <p class="blog__img--middle">Consectetur adipiscing elit, sed do siusmod tempor incisunt ut labore et dolore
+            <p class="blog__news--title">LOREM IPSUM DOLOR SIT AMET</p>
+            <p class="blog__news--text">Consectetur adipiscing elit, sed do siusmod tempor incisunt ut labore et dolore
                 magna aliqua.</p>
-            <img class="blog__img--line" src="img/blog_line.png"/>
-            <div class="row blog__img--pictograms">
+            <span class="blog__news--line"></span>
+            <div class="row blog__news--pictograms">
                 <img src="img/pictograms/blog_view.png">
                 <span>542</span>
                 <img src="img/pictograms/blog_speech.png">
@@ -896,19 +897,19 @@
             </div>
         </div>
 
-        <div class="col-sm-3  col-xs-offset-1 col-xs-11  blog__img">
-            <figure class="row blog__img--img">
+        <div class="col-sm-4 col-xs-12 blog__news">
+            <figure class="row">
                 <img class="img-responsive" src="img/blog2.png"/>
                 <figcaption>
-                    <p class="blog__img--img--1">14</p>
-                    <p class="blog__img--img--2">Jan</p>
+                    <p class="blog__news--day">14</p>
+                    <p class="blog__news--month">Jan</p>
                 </figcaption>
             </figure>
-            <p class="blog__img--top">SED DO EIUSMOD TEMPOR</p>
-            <p class="blog__img--middle">Consectetur adipiscing elit, sed do siusmod tempor incisunt ut labore et dolore
+            <p class="blog__news--title">SED DO EIUSMOD TEMPOR</p>
+            <p class="blog__news--text">Consectetur adipiscing elit, sed do siusmod tempor incisunt ut labore et dolore
                 magna aliqua.</p>
-            <img class="blog__img--line" src="img/blog_line.png"/>
-            <div class="row blog__img--pictograms">
+            <span class="blog__news--line"></span>
+            <div class="row blog__news--pictograms">
                 <img src="img/pictograms/blog_view.png">
                 <span>992</span>
                 <img src="img/pictograms/blog_speech.png">
@@ -916,35 +917,38 @@
             </div>
         </div>
 
-        <div class="col-sm-3  col-xs-offset-1 col-xs-11 blog__img">
-            <figure class="row blog__img--img">
+        <div class="col-sm-4 col-xs-12 blog__news">
+            <figure class="row">
                 <img class="img-responsive" src="img/blog3.png"/>
                 <figcaption>
-                    <p class="blog__img--img--1">12</p>
-                    <p class="blog__img--img--2">Jan</p>
+                    <p class="blog__news--day">12</p>
+                    <p class="blog__news--month">Jan</p>
                 </figcaption>
             </figure>
-            <p class="blog__img--top">INCIDIDUNT UT LABORE ET DOLORE</p>
-            <p class="blog__img--middle">Consectetur adipiscing elit, sed do siusmod tempor incisunt ut labore et dolore
+            <p class="blog__news--title">INCIDIDUNT UT LABORE ET DOLORE</p>
+            <p class="blog__news--text">Consectetur adipiscing elit, sed do siusmod tempor incisunt ut labore et dolore
                 magna aliqua.</p>
-            <img class="blog__img--line" src="img/blog_line.png"/>
-            <div class="row blog__img--pictograms">
+            <span class="blog__news--line"></span>
+            <div class="row blog__news--pictograms">
                 <img src="img/pictograms/blog_view.png">
                 <span>1560</span>
                 <img src="img/pictograms/blog_speech.png">
                 <span>98</span>
             </div>
         </div>
+
     </div>
 </div>
 
 <div class="container-fluid map">
+    <a href="https://goo.gl/maps/DHF47rwGPys">
     <img class="map--back"/>
     <div class="map__inside">
         <img class="map__inside--pictogram" src="img/pictograms/map_1.png"/>
         <p class="map__inside--text">OPEN MAP</p>
         <img class="map__inside--rectangle" src="img/pictograms/meet_rectangle.png"/>
     </div>
+    </a>
 </div>
 
 
@@ -981,7 +985,7 @@
             <p class="foot__2--title">BLOGS</p>
             <div class="row foot__2--row">
                 <div class="col-xs-5">
-                    <img src="img/foot_blog_1.png"/>
+                    <img class="img-responsive" src="img/foot_blog_1.png"/>
                 </div>
                 <div class="col-xs-7 foot__2--row--text">
                     <p class="foot__2--row--text--long">LOREM IPSUM DOLOR SIT AMET, CONSECTETUR ADIPISCING</p>
@@ -991,7 +995,7 @@
 
             <div class="row foot__2--row">
                 <div class="col-xs-5">
-                    <img src="img/foot_blog_2.png"/>
+                    <img class="img-responsive" src="img/foot_blog_2.png"/>
                 </div>
                 <div class="col-xs-7 foot__2--row--text">
                     <p class="foot__2--row--text--long">LOREM IPSUM DOLOR SIT AMET, CONSECTETUR ADIPISCING</p>
@@ -1001,7 +1005,7 @@
 
             <div class="row foot__2--row">
                 <div class="col-xs-5">
-                    <img src="img/foot_blog_3.png"/>
+                    <img class="img-responsive" src="img/foot_blog_3.png"/>
                 </div>
                 <div class="col-xs-7 foot__2--row--text">
                     <p class="foot__2--row--text--long">LOREM IPSUM DOLOR SIT AMET, CONSECTETUR ADIPISCING</p>
